// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kitaujisub > should parse 1`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": undefined,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[北宇治字幕组&7³ACG] 镜之孤城 / Kagami no Kojou [Webrip][1080p][HEVC_AAC][简繁内封]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "北宇治字幕组",
    "version": undefined,
  },
  "season": undefined,
  "source": "Webrip",
  "subtitles": undefined,
  "title": "镜之孤城 / Kagami no Kojou",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Kitaujisub > should parse 2`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 3,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[北宇治字幕组] 赛马娘 Pretty Derby Road to the Top / Uma Musume - Pretty Derby - Road to the Top [03 v2][Webrip][1080p][HEVC_AAC][简体内封]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "北宇治字幕组",
    "version": 2,
  },
  "season": undefined,
  "source": "Webrip",
  "subtitles": undefined,
  "title": "赛马娘 Pretty Derby Road to the Top / Uma Musume - Pretty Derby - Road to the Top",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Kitaujisub > should parse 3`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 4,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": "MP4",
    "name": "[北宇治Anarchism字幕组] 魔法少女毀滅者/Mahou Shoujo Magical Destroyers [04][Webrip][1080p][HEVC_AAC][CHT][MP4]",
  },
  "language": "CHT",
  "month": undefined,
  "release": {
    "group": "北宇治Anarchism字幕组",
    "version": undefined,
  },
  "season": undefined,
  "source": "Webrip",
  "subtitles": undefined,
  "title": "魔法少女毀滅者/Mahou Shoujo Magical Destroyers",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Kitaujisub > should parse 4`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 3,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[北宇治字幕组&霜庭云花Sub&氢气烤肉架]【我推的孩子】/【Oshi no ko】[03 V2][Webrip][1080p][HEVC_AAC][简繁日内封]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "霜庭云花Sub",
    "version": 2,
  },
  "season": undefined,
  "source": "Webrip",
  "subtitles": undefined,
  "title": "【我推的孩子】/",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;
